--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,10 @@
     "python.pythonPath": "venv/bin/python",
     "python.linting.enabled": true,
     "python.linting.pylintEnabled": true,
+    "python.linting.pylintArgs": [
+        "--disable",
+        "C0103,C0114,C0115,C0116,C0301,C0413,W0703",
+    ],
     "python.formatting.provider": "black",
     "python.formatting.blackArgs": [
         "--line-length",
