--- a/requirements.txt
+++ b/requirements.txt
@@ -6,21 +6,21 @@
 #
 cachetools==4.2.4
     # via google-auth
-certifi==2021.5.30
+certifi==2021.10.8
     # via requests
 chardet==4.0.0
     # via -r requirements.in
-charset-normalizer==2.0.6
+charset-normalizer==2.0.9
     # via requests
-click==8.0.1
+click==8.0.3
     # via flask
 flask==2.0.2
     # via -r requirements.in
-google-api-core==2.0.1
+google-api-core==2.3.2
     # via google-api-python-client
-google-api-python-client==2.23.0
+google-api-python-client==2.33.0
     # via -r requirements.in
-google-auth==2.2.1
+google-auth==2.3.3
     # via
     #   google-api-core
     #   google-api-python-client
@@ -32,17 +32,17 @@ google-auth-httplib2==0.1.0
     #   google-api-python-client
 google-auth-oauthlib==0.4.6
     # via -r requirements.in
-googleapis-common-protos==1.53.0
+googleapis-common-protos==1.54.0
     # via google-api-core
-httplib2==0.19.1
+httplib2==0.20.2
     # via
     #   google-api-python-client
     #   google-auth-httplib2
-idna==3.2
+idna==3.3
     # via requests
 itsdangerous==2.0.1
     # via flask
-jinja2==3.0.2
+jinja2==3.0.3
     # via flask
 markupsafe==2.0.1
     # via jinja2
@@ -50,7 +50,7 @@ oauthlib==3.1.1
     # via requests-oauthlib
 peewee==2.10.2
     # via -r requirements.in
-protobuf==3.18.0
+protobuf==3.19.1
     # via
     #   google-api-core
     #   googleapis-common-protos
@@ -62,7 +62,7 @@ pyasn1==0.4.8
     #   rsa
 pyasn1-modules==0.2.8
     # via google-auth
-pyparsing==2.4.7
+pyparsing==3.0.6
     # via httplib2
 requests==2.26.0
     # via
@@ -71,19 +71,21 @@ requests==2.26.0
     #   requests-oauthlib
 requests-oauthlib==1.3.0
     # via google-auth-oauthlib
-rsa==4.7.2
+rsa==4.8
     # via google-auth
 six==1.16.0
-    # via google-auth-httplib2
+    # via
+    #   google-auth
+    #   google-auth-httplib2
 sqlitedict==1.7.0
     # via -r requirements.in
-uritemplate==3.0.1
+uritemplate==4.1.1
     # via google-api-python-client
 urllib3==1.26.7
     # via requests
 wcwidth==0.2.5
     # via -r requirements.in
-werkzeug==2.0.1
+werkzeug==2.0.2
     # via flask
 
 # The following packages are considered to be unsafe in a requirements file:
