--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,8 +43,9 @@ dependencies = [
     "google-api-python-client", 
     "google-auth-httplib2", 
     "google-auth-oauthlib", 
+    "PlexAPI",
     "chardet", 
-    "wcwidth", 
+    "tabulate[widechars]", 
     "psutil", 
     "requests",
 ]
