--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ version_scheme = "release-branch-semver"
 name = "autoscan"
 description = "Script to assist in scanning Plex library more efficiently."
 readme = "README.md"
-requires-python = ">=3.7, <3.11"
+requires-python = ">=3.7, <4"
 license = {file = "LICENSE.md"}
 authors = [
     {name = "by275", email = "by275@protonmail.com"}
@@ -33,6 +33,8 @@ classifiers = [
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3 :: Only",
     "Topic :: Internet :: WWW/HTTP",
     "Topic :: Software Development :: Libraries",
 ]
