opt-out dependency for chardet
After refectoring smi2srt, chardet is not crucial anymore and faster cchardet is better alternative if you insist

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,11 +46,11 @@ dependencies = [
     "google-auth-httplib2", 
     "google-auth-oauthlib", 
     "PlexAPI",
-    "chardet", 
     "tabulate[widechars]", 
     "psutil", 
     "requests",
 ]
+optional-dependencies = {chardet = ["faust-cchardet"]}
 dynamic = ["version"]
 
 [project.urls]
