add support for docker image

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,4 +16,7 @@
     "[python]": {
         "editor.formatOnSave": true
     },
+    "[dockerfile]": {
+        "editor.formatOnSave": false,
+    },
 }
