--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -3,9 +3,9 @@ name: buildx
 on:
   push:
     branches:
-      - 'master'
+      - "master"
     tags:
-      - '*'
+      - "*"
   pull_request:
   workflow_dispatch:
 
@@ -14,26 +14,21 @@ env:
 
 jobs:
   buildx:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v5
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Buildx
+      - name: Set up Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Login to ghcr.io
+      - name: Login to ghcr.io
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - 
-        name: Buildx and Push (PR)
+      - name: Buildx and Push (PR)
         if: github.event_name == 'pull_request'
         uses: docker/build-push-action@v6
         with:
@@ -46,8 +41,7 @@ jobs:
           build-args: |
             AUTOSCAN_VERSION=${{ github.ref }}
           push: true
-      -
-        name: Get Variables (Tag)
+      - name: Get Variables (Tag)
         if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
         run: |
           VER_FULL="${GITHUB_REF##*/}"
@@ -56,8 +50,7 @@ jobs:
           echo "VER_MAJOR=$VER_MAJOR" >> $GITHUB_ENV
           VER_MINOR=$(echo $VER_FULL | cut -d. -f-2)
           echo "VER_MINOR=$VER_MINOR" >> $GITHUB_ENV
-      - 
-        name: Buildx and Push (Tag)
+      - name: Buildx and Push (Tag)
         if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
         uses: docker/build-push-action@v6
         with:
@@ -71,8 +64,7 @@ jobs:
           build-args: |
             AUTOSCAN_VERSION=${{ env.VER_FULL }}
           push: true
-      - 
-        name: Buildx and Push (latest)
+      - name: Buildx and Push (latest)
         if: github.event_name == 'push' && github.ref_name == 'master'
         uses: docker/build-push-action@v6
         with:
