--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -15,6 +15,8 @@ env:
 jobs:
   buildx:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
     steps:
       - name: Checkout
         uses: actions/checkout@v5
